# sorteio-magnifico-mooca

./: .flake8  .pre-commit-config.yaml  README.md  pages.excalidraw  pyproject.toml
backend/: .gitignore  main.py  notes.md  pyproject.toml
backend/app/: config.py  conftest.py  router.py
backend/app/apartamentos/: helpers.py  schemas.py
backend/app/apartamentos/tests/: test_helpers.py  test_unity_helpers.py
backend/app/db/: base.py  session.py
backend/app/db/tests/: test_base.py  test_db.py
backend/app/models/: models.py  unidade.py  vaga.py
backend/app/resultados/: models.py  schema.py  schemas.py
backend/app/schema/: base.py
backend/app/schemas/: vaga.py
backend/app/sorteio/: draw.py
backend/app/sorteio/tests/: test_draw.py
backend/app/tests/: conftest.py  session.py
backend/app/unidades/: helpers.py  models.py  schema.py  schemas.py
backend/app/unidades/tests/: test_unity_helpers.py
backend/app/vagas/: enumerators.py  helpers.py  models.py  schema.py  schemas.py
backend/app/vagas/tests/: test_helpers.py  test_slot_helpers.py
backend/src/: main.py
backend/src/app/: router.py
backend/src/app/db/: session.py
backend/src/app/schemas/: enumerators.py  resultado.py  unidade.py
scripts/: pdf.py
src/: config.py
src/magnifico/: config.py  constants.py  database.py  vaga.py
src/magnifico/apartamentos/: models.py
src/magnifico/db/: base.py  initers.py
src/magnifico/db/storage/: apartamentos.json  sorteios.json  vagas.json
src/magnifico/serializer/: __init__.py  json.py
src/magnifico/sorteios/: models.py
src/magnifico/vagas/: enums.py  models.py
